--- a/arch/arm/configs/a57_defconfig
+++ b/arch/arm/configs/a57_defconfig
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Linux/arm 2.6.38.6 Kernel Configuration
-# Thu Sep 20 05:41:11 2012
+# Wed Aug  7 11:40:43 2013
 #
 CONFIG_ARM=y
 CONFIG_SYS_SUPPORTS_APM_EMULATION=y
@@ -35,13 +35,13 @@ CONFIG_BROKEN_ON_SMP=y
 CONFIG_LOCK_KERNEL=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION="$(KERNEL_LOCAL_VERSION)-perf"
+CONFIG_LOCALVERSION="$(KERNEL_LOCAL_VERSION)-perf+"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
 CONFIG_HAVE_KERNEL_LZO=y
-CONFIG_KERNEL_GZIP=y
-# CONFIG_KERNEL_LZMA is not set
+# CONFIG_KERNEL_GZIP is not set
+CONFIG_KERNEL_LZMA=y
 # CONFIG_KERNEL_LZO is not set
 CONFIG_SWAP=y
 CONFIG_SYSVIPC=y
@@ -74,8 +74,7 @@ CONFIG_PREEMPT_RCU=y
 CONFIG_RCU_FANOUT=32
 # CONFIG_RCU_FANOUT_EXACT is not set
 # CONFIG_TREE_RCU_TRACE is not set
-CONFIG_IKCONFIG=y
-CONFIG_IKCONFIG_PROC=y
+# CONFIG_IKCONFIG is not set
 CONFIG_LOG_BUF_SHIFT=17
 CONFIG_CGROUPS=y
 # CONFIG_CGROUP_DEBUG is not set
@@ -174,11 +173,18 @@ CONFIG_BLK_DEV_BSG=y
 # IO Schedulers
 #
 CONFIG_IOSCHED_NOOP=y
-# CONFIG_IOSCHED_DEADLINE is not set
+CONFIG_IOSCHED_DEADLINE=y
 CONFIG_IOSCHED_CFQ=y
-CONFIG_DEFAULT_CFQ=y
+# CONFIG_IOSCHED_BFQ is not set
+# CONFIG_IOSCHED_ROW is not set
+CONFIG_IOSCHED_VR=y
+CONFIG_IOSCHED_SIO=y
+# CONFIG_DEFAULT_VR is not set
+# CONFIG_DEFAULT_DEADLINE is not set
+# CONFIG_DEFAULT_CFQ is not set
+CONFIG_DEFAULT_SIO=y
 # CONFIG_DEFAULT_NOOP is not set
-CONFIG_DEFAULT_IOSCHED="cfq"
+CONFIG_DEFAULT_IOSCHED="sio"
 # CONFIG_INLINE_SPIN_TRYLOCK is not set
 # CONFIG_INLINE_SPIN_TRYLOCK_BH is not set
 # CONFIG_INLINE_SPIN_LOCK is not set
@@ -304,6 +310,7 @@ CONFIG_LCT_AW551=y
 # CONFIG_LCT_AE550 is not set
 # CONFIG_LCT_AW550 is not set
 # CONFIG_LCT_AE770 is not set
+# CONFIG_LCT_AW735 is not set
 
 #
 # LCT Customer of Project Selection
@@ -311,7 +318,11 @@ CONFIG_LCT_AW551=y
 CONFIG_LCT_AW551_YL=y
 # CONFIG_LCT_AW553_YL is not set
 # CONFIG_LCT_AW535_LCT is not set
+# CONFIG_LCT_AW535_LCT_B is not set
+# CONFIG_LCT_AW535_QL is not set
 CONFIG_LCT_AW535_MCX=y
+# CONFIG_LCT_AW535_MAK is not set
+# CONFIG_LCT_AW535_VHH is not set
 # CONFIG_LCT_AW551_Others is not set
 # CONFIG_MSM_STACKED_MEMORY is not set
 CONFIG_PHYS_OFFSET=0x00200000
@@ -332,12 +343,12 @@ CONFIG_MSM7X00A_SLEEP_MODE_POWER_COLLAPSE_SUSPEND=y
 # CONFIG_MSM7X00A_SLEEP_MODE_RAMP_DOWN_AND_WAIT_FOR_INTERRUPT is not set
 # CONFIG_MSM7X00A_SLEEP_WAIT_FOR_INTERRUPT is not set
 CONFIG_MSM7X00A_SLEEP_MODE=0
-# CONFIG_MSM7X00A_IDLE_SLEEP_MODE_POWER_COLLAPSE_SUSPEND is not set
-CONFIG_MSM7X00A_IDLE_SLEEP_MODE_POWER_COLLAPSE=y
+CONFIG_MSM7X00A_IDLE_SLEEP_MODE_POWER_COLLAPSE_SUSPEND=y
+# CONFIG_MSM7X00A_IDLE_SLEEP_MODE_POWER_COLLAPSE is not set
 # CONFIG_MSM7X00A_IDLE_SLEEP_MODE_APPS_SLEEP is not set
 # CONFIG_MSM7X00A_IDLE_SLEEP_MODE_RAMP_DOWN_AND_WAIT_FOR_INTERRUPT is not set
 # CONFIG_MSM7X00A_IDLE_SLEEP_WAIT_FOR_INTERRUPT is not set
-CONFIG_MSM7X00A_IDLE_SLEEP_MODE=1
+CONFIG_MSM7X00A_IDLE_SLEEP_MODE=0
 CONFIG_MSM7X00A_IDLE_SLEEP_MIN_TIME=20000000
 CONFIG_MSM7X00A_IDLE_SPIN_TIME=80000
 CONFIG_MSM_IDLE_STATS=y
@@ -380,8 +391,11 @@ CONFIG_MSM_RMT_STORAGE_CLIENT=y
 # CONFIG_MSM_RMT_STORAGE_CLIENT_STATS is not set
 CONFIG_MSM_DALRPC=y
 CONFIG_MSM_DALRPC_TEST=m
-# CONFIG_MSM_CPU_FREQ_SET_MIN_MAX is not set
-# CONFIG_MSM_AVS_HW is not set
+CONFIG_MSM_CPU_FREQ_SET_MIN_MAX=y
+CONFIG_MSM_CPU_FREQ_MAX=1000800
+CONFIG_MSM7X27A_OVERCLOCK=y
+CONFIG_MSM_CPU_FREQ_MIN=245760
+CONFIG_MSM_AVS_HW=y
 # CONFIG_MSM_HW3D is not set
 CONFIG_MSM_ADSP=y
 CONFIG_ADSP_RPC_VER=0x30002
@@ -395,7 +409,7 @@ CONFIG_MSM_DMA_TEST=y
 CONFIG_AUDIO_AAC_PLUS=y
 CONFIG_AUDIO_ENHANCED_AAC_PLUS=y
 CONFIG_SURF_FFA_GPIO_KEYPAD=y
-CONFIG_MSM_SLEEP_TIME_OVERRIDE=y
+# CONFIG_MSM_SLEEP_TIME_OVERRIDE is not set
 # CONFIG_MSM_MEMORY_LOW_POWER_MODE is not set
 CONFIG_MSM_PM_TIMEOUT_HALT=y
 # CONFIG_MSM_PM_TIMEOUT_RESET_MODEM is not set
@@ -405,6 +419,7 @@ CONFIG_MSM_IDLE_WAIT_ON_MODEM=0
 # CONFIG_MSM_DIRECT_SCLK_ACCESS is not set
 CONFIG_MSM_GPIOMUX=y
 # CONFIG_MSM_BUS_SCALING is not set
+# CONFIG_MSM_SLEEP_STATS is not set
 # CONFIG_MSM_STANDALONE_POWER_COLLAPSE is not set
 # CONFIG_MSM_GSBI9_UART is not set
 # CONFIG_MSM_SHARED_GPIO_FOR_UART2DM is not set
@@ -544,13 +559,49 @@ CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_CONSERVATIVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_LAGFREE is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_SMARTASS is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_SCARY is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_MINMAX is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_SAVAGEDZEN is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVEX is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_SMARTASS2 is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_SMARTASSH3 is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_SMOOTHASS is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_BRAZILIANWAX is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_INTELLIDEMAND is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_LULZACTIVE is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_VIRTUOUS is not set
+CONFIG_CPU_FREQ_GOV_LAZY=y
+CONFIG_CPU_FREQ_GOV_BADASS=y
+CONFIG_CPU_FREQ_GOV_INTELLIDEMAND=y
+CONFIG_CPU_FREQ_GOV_LULZACTIVE=y
+# CONFIG_CPU_FREQ_GOV_SUPERBAD is not set
+# CONFIG_CPU_FREQ_GOV_VIRTUOUS is not set
+# CONFIG_CPU_FREQ_GOV_DARKSIDE is not set
+CONFIG_CPU_FREQ_GOV_LIONHEART=y
+CONFIG_CPU_FREQ_GOV_ONDEMANDX=y
 CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
-# CONFIG_CPU_IDLE is not set
+CONFIG_CPU_FREQ_GOV_LAGFREE=y
+# CONFIG_CPU_FREQ_GOV_SMARTASS is not set
+CONFIG_CPU_FREQ_GOV_SCARY=y
+# CONFIG_CPU_FREQ_GOV_BRAZILIANWAX is not set
+# CONFIG_CPU_FREQ_GOV_MINMAX is not set
+CONFIG_CPU_FREQ_GOV_INTERACTIVEX=y
+CONFIG_CPU_FREQ_GOV_SAVAGEDZEN=y
+CONFIG_CPU_FREQ_GOV_SMARTASS2=y
+# CONFIG_CPU_FREQ_GOV_SMARTASSH3 is not set
+# CONFIG_CPU_FREQ_GOV_SMOOTHASS is not set
+CONFIG_CPU_FREQ_MIN_TICKS=10
+CONFIG_CPU_FREQ_SAMPLING_LATENCY_MULTIPLIER=1000
+CONFIG_CPU_IDLE=y
+CONFIG_CPU_IDLE_GOV_LADDER=y
+CONFIG_CPU_IDLE_GOV_MENU=y
 CONFIG_CPU_FREQ_MSM=y
 
 #
@@ -998,6 +1049,7 @@ CONFIG_BLK_DEV_RAM_SIZE=4096
 CONFIG_MISC_DEVICES=y
 # CONFIG_AD525X_DPOT is not set
 CONFIG_ANDROID_PMEM=y
+# CONFIG_GSENSOR_BMA2X2 is not set
 # CONFIG_ICS932S401 is not set
 # CONFIG_ENCLOSURE_SERVICES is not set
 # CONFIG_KERNEL_DEBUGGER_CORE is not set
@@ -1205,11 +1257,12 @@ CONFIG_SENSORS_APDS9900=y
 CONFIG_MIXED_SENSOR=y
 # CONFIG_BOSCH_BMA150 is not set
 CONFIG_BOSCH_BMA250=y
-# CONFIG_BOSCH_BMA2X2 is not set
 CONFIG_BOSCH_BMA250_ENABLE_IRQ=y
 # CONFIG_BOSCH_BMA250_USE_SMBUS is not set
 # CONFIG_BOSCH_BMA250_WITH_DEBUG is not set
 # CONFIG_BOSCH_BMA250_HAS_EARLYSUSPEND is not set
+# CONFIG_BOSCH_BMA222 is not set
+CONFIG_BOSCH_BMA2x2=y
 # CONFIG_MMC328x is not set
 # CONFIG_MCUBE_MC32X0 is not set
 
